@@ -1,35 +1,40 @@
 # Require this file if you need Unicode support.
 require 'cucumber/platform'
 require 'cucumber/formatter/ansicolor'
-
 $KCODE='u' unless Cucumber::RUBY_1_9
 
-if Cucumber::WINDOWS_MRI && `chcp` =~ /(\d+)/
+if Cucumber::WINDOWS && `cmd /c chcp` =~ /(\d+)/
+  require 'iconv'
   codepage = $1.to_i
-  codepages = (1251..1252)
+  Cucumber::CODEPAGE = "cp#{codepage}"
 
-  if codepages.include?(codepage)
-    Cucumber::CODEPAGE = "cp#{codepage}"
-  
-    require 'iconv'
-    module Kernel #:nodoc:
-      alias cucumber_print print
-      def print(*a)
-        begin
-          cucumber_print(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a))
-        rescue Iconv::IllegalSequence
-          cucumber_print(*a)
+  module Cucumber
+    module WindowsOutput #:nodoc:
+      def self.extended(o)
+        o.instance_eval do
+          alias cucumber_print print
+          def print(*a)
+            begin
+              cucumber_print(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a.map{|a|a.to_s}))
+            rescue Iconv::IllegalSequence
+              cucumber_print(*a)
+            end
+          end
+
+          alias cucumber_puts puts
+          def puts(*a)
+            begin
+              cucumber_puts(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a.map{|a|a.to_s}))
+            rescue Iconv::IllegalSequence
+              cucumber_puts(*a)
+            end
+          end
         end
       end
 
-      alias cucumber_puts puts
-      def puts(*a)
-        begin
-          cucumber_puts(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a))
-        rescue Iconv::IllegalSequence
-          cucumber_puts(*a)
-        end
-      end
+      Kernel.extend(self)
+      STDOUT.extend(self)
+      STDERR.extend(self)
     end
   end
 end
