@@ -56,6 +56,7 @@ module Cli
         context "with LANG specified as 'help'" do
           it "lists all known langues" do
             when_parsing '-l help' do
+              require 'cucumber/cli/language_help_formatter'
               LanguageHelpFormatter.should_receive(:list_languages).with(output_stream)
             end
           end
